--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div class="head" id="homez">
         <div class="head_cont">
-            <h1 style="font-size:50px;">I am Aishwarya Joshi :)</h1>
+            <h1 style="font-size:54px; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">HEY THERE! <br>I am Aishwarya Joshi :)</h1>
             <p>Programmer | Wed Developer | Learner</p>
         </div>
 
@@ -40,7 +40,7 @@
         <h5>____Who Am I____</h5><br><br><br>
         <div class="about_cont">
 
-            <div class="img"> <img src="myimage.jpg" alt="myimage"><br><br></div>
+            <div class="img .fade-in-image"> <img src="myimage.jpg" alt="myimage"><br><br></div>
 
             <div class="text">
                 <p><b>Dedicated</b> computer science student with a zeal for learning and a strong foundation in
@@ -53,7 +53,10 @@
                     the
                     advancement of technology. Seeking opportunities to expand skills and make meaningful contributions
                     in
-                    the field.
+                    the field.I am a skilled and innovative Computer Science Engineer with a passion for crafting
+                    efficient and elegant solutions to complex technical challenges. My journey in the world of
+                    technology has been marked by continuous learning, hands-on experience, and a dedication to pushing
+                    the boundaries of what's possible in the digital realm.
                 </p>
             </div>
         </div>
@@ -111,7 +114,7 @@
 
             <div class="wrapper">
 
-                <div class="form">
+                <div class="form" >
                     <h4>GET IN TOUCH WITH ME :)</h4>
                     <h2 class="form-headline">Send a message</h2>
                     <form id="submit-form" action="mailto:aishwaryajoshi762@gmail.com" method="post"
@@ -135,13 +138,13 @@
                     </p>
 
                     <p class="full-width">
-                        <input type="submit" class="submit-btn" value="send" onclick="checkValidations()">
-                        <button class="reset-btn" onclick="reset()">Reset</button>
+                        <input type="submit" class="submit-btn" value="Send">
+                       
                     </p>
                     </form>
                 </div>
 
-                <div class="contacts contact-wrapper">
+                <div class="contacts contact-wrapper" style="color: white;">
 
                     <ul>
                         <li>Let's stay in touch! Drop a message, and I'will ensure your questions find the answers they
